example/src/snapshots/rust_sitter_example__externals__tests__externals_grammar-4.snap
---
source: example/src/externals.rs
assertion_line: 29
expression: "grammar::parse(\"23_.\")"
---
Ok(
    Language {
        v: Some(
            23,
        ),
        _s: (),
        _d: Some(
            (),
        ),
    },
)
