example/src/snapshots/rust_sitter_example__externals__tests__externals_grammar-5.snap
---
source: example/src/externals.rs
assertion_line: 30
expression: "grammar::parse(\" _  \")"
---
Ok(
    Language {
        v: None,
        _s: (),
        _d: None,
    },
)
