example/src/snapshots/rust_sitter_example__externals__tests__externals_grammar-7.snap
---
source: example/src/externals.rs
assertion_line: 32
expression: "grammar::parse(\"1_;\")"
---
Ok(
    Language {
        v: Some(
            1,
        ),
        _s: (),
        _d: None,
    },
)
