example/src/snapshots/rust_sitter_example__externals__tests__externals_grammar-8.snap
---
source: example/src/externals.rs
assertion_line: 33
expression: "grammar::parse(\"23;; , ;;_.\")"
---
Ok(
    Language {
        v: Some(
            23,
        ),
        _s: (),
        _d: Some(
            (),
        ),
    },
)
