example/src/snapshots/rust_sitter_example__externals__tests__externals_grammar.snap
---
source: example/src/externals.rs
assertion_line: 22
expression: "grammar::parse(\"_\")"
---
Ok(
    Language {
        v: None,
        _s: (),
        _d: None,
    },
)
